Python 101
>>> 2+2
4
>>> 50-5*6
20
>>> (50-5*6)/4
5.0
>>> 8/5
1.6
>>> 17/3
5.666666666666667
>>> 17//3
5
>>> 17%3
2
>>> 5*3+2
17
>>> 5**2
25
>>> 2**7
128
>>> width=20
>>> height=5*9
>>> width*height
900
>>> 4*3075-1
12299
>>> 4*3.75-1
14.0
>>> 'spam eggs'
'spam eggs'
>>> "doesn't"
"doesn't"
>>> 'doesn\t'
'doesn\t'
>>> 'doesn\'t'
"doesn't"
>>> '"Yes," he said'
'"Yes," he said'
>>> "\"Yes,\"he said."
'"Yes,"he said.'
>>> '"Isn\'t", she said.'
'"Isn\'t", she said.'
>>> prefix='Py'
>>> prefix+'thon123'
'Python123'
>>> word='Python'
>>> word[0]
'P'
>>> word[5]
'n'
>>> word[-1]
'n'
>>> word[-2]
'o'
>>> word[-6]
'P'
>>> wrod[0:2]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'wrod' is not defined
>>> word[0;2]
  File "<stdin>", line 1
    word[0;2]
          ^
SyntaxError: invalid syntax
>>> word[0:2]
'Py'
>>> word[2:5]
'tho'
>>> word[:2]+word[2:]
'Python'
>>> word[:4]+word[4:]
'Python'
>>> squares=[1,4,9,16,25]
>>> squares
[1, 4, 9, 16, 25]
>>> squares[0]
1
>>> squares[-1]
25
>>> squares[-3:]
[9, 16, 25]
>>> squares+[36,49,64,81,100]
[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]
>>> cubes=[1,8,27,65,125]
>>> 4**3
64
>>> cubes[3]=64
>>> cubes
[1, 8, 27, 64, 125]
>>> cubes.append(216)
>>> cubes.append(7**3)
>>> cubes
[1, 8, 27, 64, 125, 216, 343]
>>> letters=['a','b','c','d',
...
KeyboardInterrupt
>>> letters=['a','b','c','d','e','f','g']
>>> leters
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'leters' is not defined
>>> letters
['a', 'b', 'c', 'd', 'e', 'f', 'g']
>>> letters[2:5]=[]
>>> letters[2:5]
['f', 'g']
>>> letters[2:5]=['C','D','E']
>>> letters
['a', 'b', 'C', 'D', 'E']
>>> letters[2:5]=[]
>>> letters
['a', 'b']
>>> letters[:]=[]
>>> letters
[]
>>> letters['a','b','c','d']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers or slices, not tuple
>>> letters=['a','b','c','d']
>>> len(letters)
4
